temporarily fix overflow issue on mobile youth page

--- a/assets/sass/base/_root.scss
+++ b/assets/sass/base/_root.scss
@@ -6,6 +6,10 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 main { // push content below the header
   padding-top: $navbar-height;
   @include screen-tablet-max {
